--- a/style.css
+++ b/style.css
@@ -1,26 +1,3 @@
-/* input[type= button] {
-    width: 100px; 
-    height: 45px;
-    font-size: 25px; 
-    margin-top: 5px;
-    outline:none;
-    border: none;
-}
-input[type= button]:hover {
-    background-color: lightgray;
-}
-.blok{
-    width: 600px;
-    height: 500px;
-    border: 3px solid blue;
-}
-.left {
-   float: left;
-}
-.right {
-    float: right;
-    margin-right: 25px;
-}*/
 body {
     background-color: white;
     }
@@ -28,7 +5,7 @@ body {
     height: 65px;
     width: 1600px;
     background-color: #f6f9f9;
-    font-family: "sans-serif";
+    font-family: Arial,"sans-serif";
     color: #2d3950;
     font-size: 30px;
     top:0;
@@ -48,7 +25,7 @@ body {
     margin: 20 150;
 }
 .logo2{
-    font-family: "sans-serif";
+    font-family: Arial,"sans-serif";
     color: #2d3950;
     font-size: 120px;
     top:0;
@@ -68,7 +45,7 @@ body {
 .logo3{
     width:650px; 
     height:60px; 
-    font-family: "sans-serif";
+    font-family: Arial,"sans-serif";
     color: #2d3950;
     font-size: 25px;
     top:0;
